# texutils

./: pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  lint.yml  release.yml
tests/: texutils_test.py
tests/sample/: sample.tex  sample.tex.j2
