[tool.poetry]
name = "texutils"
version = "0.3.0"
description = "A Library to work with LaTeX files"
authors = ["MrQuentinet <quentinvilluis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pymupdf = "^1.22.5"
pre-commit = "^3.3.3"
isort = "^5.12.0"
pyupgrade = "^3.10.1"
black = "^23.7.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
